fixes placeholder overflow

--- a/styles/style.css
+++ b/styles/style.css
@@ -29,7 +29,6 @@ body {
 
 .placeholder-img{
     width:100%;
-    height:100%;
     z-index: -1;
     opacity: 0;
 }
